// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HostProfile /> if \`props.email\` is defined should render the right structure 1`] = `
<HostProfile
  avatarUrl="https://si4.cdbcdn.com/oh/4efbc79e-34db-4447-b31a-24e77f33f4e9.jpg?w=1024&mode=max"
  contactInformationHeadingText="Contact Information"
  description="We do love cats"
  email="welovecats@lodgify.com"
  emailLabel="Email"
  headingText="Your Host"
  languages={null}
  languagesLabel="Languages"
  name="Mitjons & Kira"
  phone={null}
  phoneLabel="Phone"
>
  <Grid
    areColumnsCentered={false}
    isStackable={false}
    textAlign="left"
  >
    <Grid
      centered={false}
      stackable={false}
      textAlign="left"
    >
      <div
        className="ui left aligned grid"
      >
        <GridRow
          horizontalAlignContent="left"
        >
          <GridRow
            textAlign="left"
          >
            <div
              className="left aligned row"
            >
              <GridColumn
                verticalAlignContent="top"
                width={12}
              >
                <GridColumn
                  verticalAlign="top"
                  width={12}
                >
                  <div
                    className="top aligned twelve wide column"
                  >
                    <Heading
                      className={null}
                      hasMargin={true}
                      isColorInverted={false}
                      size="medium"
                      textAlign={null}
                    >
                      <Header
                        as="h3"
                        className=""
                        inverted={false}
                        textAlign={null}
                      >
                        <h3
                          className="ui header"
                        >
                          Your Host
                        </h3>
                      </Header>
                    </Heading>
                  </div>
                </GridColumn>
              </GridColumn>
            </div>
          </GridRow>
        </GridRow>
        <GridRow
          horizontalAlignContent="left"
        >
          <GridRow
            textAlign="left"
          >
            <div
              className="left aligned row"
            >
              <GridColumn
                verticalAlignContent="top"
                width={12}
              >
                <GridColumn
                  verticalAlign="top"
                  width={12}
                >
                  <div
                    className="top aligned twelve wide column"
                  >
                    <FlexContainer
                      alignContent={null}
                      alignItems="center"
                      flexDirection={null}
                      flexWrap={null}
                      justifyContent={null}
                    >
                      <div
                        className="flex-container"
                        style={
                          Object {
                            "alignContent": null,
                            "alignItems": "center",
                            "display": "flex",
                            "flexDirection": null,
                            "flexGrow": "1",
                            "flexWrap": null,
                            "height": "100%",
                            "justifyContent": null,
                          }
                        }
                      >
                        <Thumbnail
                          className=""
                          hasMargin={true}
                          hasRoundedCorners={false}
                          imageUrl="https://si4.cdbcdn.com/oh/4efbc79e-34db-4447-b31a-24e77f33f4e9.jpg?w=1024&mode=max"
                          isCircular={true}
                          isSquare={false}
                          label={null}
                          size={null}
                        >
                          <div
                            className="ui thumbnail has-margin is-circular"
                          >
                            <withLazyLoad(ResponsiveImage)
                              hasRoundedCorners={false}
                              imageUrl="https://si4.cdbcdn.com/oh/4efbc79e-34db-4447-b31a-24e77f33f4e9.jpg?w=1024&mode=max"
                              isCircular={true}
                              isFluid={true}
                              isLazyLoaded={true}
                              isSquare={false}
                            >
                              <LazyLoader
                                componentProps={
                                  Object {
                                    "hasRoundedCorners": false,
                                    "isCircular": true,
                                    "isFluid": true,
                                    "isLazyLoaded": true,
                                    "isSquare": false,
                                    "placeholderImageUrl": undefined,
                                    "sizes": undefined,
                                  }
                                }
                                lazyProps={
                                  Object {
                                    "imageUrl": "https://si4.cdbcdn.com/oh/4efbc79e-34db-4447-b31a-24e77f33f4e9.jpg?w=1024&mode=max",
                                    "srcSet": undefined,
                                  }
                                }
                              >
                                <div />
                                <ResponsiveImage
                                  hasRoundedCorners={false}
                                  imageHeight={null}
                                  imageTitle="Image Title"
                                  imageUrl=""
                                  imageWidth={null}
                                  isAvatar={false}
                                  isCircular={true}
                                  isFluid={true}
                                  isLazyLoaded={true}
                                  isSquare={false}
                                  label={null}
                                  sizes={null}
                                  srcSet={null}
                                >
                                  <figure
                                    className="responsive-image is-fluid is-circular"
                                  />
                                </ResponsiveImage>
                                <div />
                              </LazyLoader>
                            </withLazyLoad(ResponsiveImage)>
                          </div>
                        </Thumbnail>
                        <Heading
                          className={null}
                          hasMargin={true}
                          isColorInverted={false}
                          size="small"
                          textAlign={null}
                        >
                          <Header
                            as="h4"
                            className=""
                            inverted={false}
                            textAlign={null}
                          >
                            <h4
                              className="ui header"
                            >
                              Mitjons & Kira
                            </h4>
                          </Header>
                        </Heading>
                      </div>
                    </FlexContainer>
                  </div>
                </GridColumn>
              </GridColumn>
            </div>
          </GridRow>
        </GridRow>
        <GridRow
          horizontalAlignContent="left"
          verticalAlign="top"
        >
          <GridRow
            textAlign="left"
            verticalAlign="top"
          >
            <div
              className="left aligned top aligned row"
            >
              <GridColumn
                computer={7}
                mobile={12}
                tablet={12}
                verticalAlignContent="top"
                width={null}
              >
                <GridColumn
                  computer={7}
                  mobile={12}
                  tablet={12}
                  verticalAlign="top"
                  width={null}
                >
                  <div
                    className="top aligned seven wide computer twelve wide mobile twelve wide tablet column"
                  >
                    <Paragraph
                      isCompact={false}
                      size="medium"
                      weight={null}
                    >
                      <p
                        className=""
                      >
                        We do love cats
                      </p>
                    </Paragraph>
                  </div>
                </GridColumn>
              </GridColumn>
              <GridColumn
                computer={5}
                mobile={12}
                tablet={12}
                verticalAlignContent="top"
                width={null}
              >
                <GridColumn
                  computer={5}
                  mobile={12}
                  tablet={12}
                  verticalAlign="top"
                  width={null}
                >
                  <div
                    className="top aligned five wide computer twelve wide mobile twelve wide tablet column"
                  >
                    <Heading
                      className={null}
                      hasMargin={true}
                      isColorInverted={false}
                      size="small"
                      textAlign={null}
                    >
                      <Header
                        as="h4"
                        className=""
                        inverted={false}
                        textAlign={null}
                      >
                        <h4
                          className="ui header"
                        >
                          Contact Information
                        </h4>
                      </Header>
                    </Heading>
                    <List
                      relaxed={true}
                      size="medium"
                    >
                      <div
                        className="ui medium relaxed list"
                        role="list"
                      >
                        <ListItem>
                          <div
                            className="item"
                            onClick={[Function]}
                            role="listitem"
                          >
                            <span>
                              Email: 
                            </span>
                            <span>
                              welovecats@lodgify.com
                            </span>
                          </div>
                        </ListItem>
                      </div>
                    </List>
                  </div>
                </GridColumn>
              </GridColumn>
            </div>
          </GridRow>
        </GridRow>
      </div>
    </Grid>
  </Grid>
</HostProfile>
`;

exports[`<HostProfile /> if \`props.languages\` is defined should render the right structure 1`] = `
<HostProfile
  avatarUrl="https://si4.cdbcdn.com/oh/4efbc79e-34db-4447-b31a-24e77f33f4e9.jpg?w=1024&mode=max"
  contactInformationHeadingText="Contact Information"
  description="We do love cats"
  email={null}
  emailLabel="Email"
  headingText="Your Host"
  languages={
    Array [
      "English",
      "Italian",
      "German",
      "Spanish",
    ]
  }
  languagesLabel="Languages"
  name="Mitjons & Kira"
  phone={null}
  phoneLabel="Phone"
>
  <Grid
    areColumnsCentered={false}
    isStackable={false}
    textAlign="left"
  >
    <Grid
      centered={false}
      stackable={false}
      textAlign="left"
    >
      <div
        className="ui left aligned grid"
      >
        <GridRow
          horizontalAlignContent="left"
        >
          <GridRow
            textAlign="left"
          >
            <div
              className="left aligned row"
            >
              <GridColumn
                verticalAlignContent="top"
                width={12}
              >
                <GridColumn
                  verticalAlign="top"
                  width={12}
                >
                  <div
                    className="top aligned twelve wide column"
                  >
                    <Heading
                      className={null}
                      hasMargin={true}
                      isColorInverted={false}
                      size="medium"
                      textAlign={null}
                    >
                      <Header
                        as="h3"
                        className=""
                        inverted={false}
                        textAlign={null}
                      >
                        <h3
                          className="ui header"
                        >
                          Your Host
                        </h3>
                      </Header>
                    </Heading>
                  </div>
                </GridColumn>
              </GridColumn>
            </div>
          </GridRow>
        </GridRow>
        <GridRow
          horizontalAlignContent="left"
        >
          <GridRow
            textAlign="left"
          >
            <div
              className="left aligned row"
            >
              <GridColumn
                verticalAlignContent="top"
                width={12}
              >
                <GridColumn
                  verticalAlign="top"
                  width={12}
                >
                  <div
                    className="top aligned twelve wide column"
                  >
                    <FlexContainer
                      alignContent={null}
                      alignItems="center"
                      flexDirection={null}
                      flexWrap={null}
                      justifyContent={null}
                    >
                      <div
                        className="flex-container"
                        style={
                          Object {
                            "alignContent": null,
                            "alignItems": "center",
                            "display": "flex",
                            "flexDirection": null,
                            "flexGrow": "1",
                            "flexWrap": null,
                            "height": "100%",
                            "justifyContent": null,
                          }
                        }
                      >
                        <Thumbnail
                          className=""
                          hasMargin={true}
                          hasRoundedCorners={false}
                          imageUrl="https://si4.cdbcdn.com/oh/4efbc79e-34db-4447-b31a-24e77f33f4e9.jpg?w=1024&mode=max"
                          isCircular={true}
                          isSquare={false}
                          label={null}
                          size={null}
                        >
                          <div
                            className="ui thumbnail has-margin is-circular"
                          >
                            <withLazyLoad(ResponsiveImage)
                              hasRoundedCorners={false}
                              imageUrl="https://si4.cdbcdn.com/oh/4efbc79e-34db-4447-b31a-24e77f33f4e9.jpg?w=1024&mode=max"
                              isCircular={true}
                              isFluid={true}
                              isLazyLoaded={true}
                              isSquare={false}
                            >
                              <LazyLoader
                                componentProps={
                                  Object {
                                    "hasRoundedCorners": false,
                                    "isCircular": true,
                                    "isFluid": true,
                                    "isLazyLoaded": true,
                                    "isSquare": false,
                                    "placeholderImageUrl": undefined,
                                    "sizes": undefined,
                                  }
                                }
                                lazyProps={
                                  Object {
                                    "imageUrl": "https://si4.cdbcdn.com/oh/4efbc79e-34db-4447-b31a-24e77f33f4e9.jpg?w=1024&mode=max",
                                    "srcSet": undefined,
                                  }
                                }
                              >
                                <div />
                                <ResponsiveImage
                                  hasRoundedCorners={false}
                                  imageHeight={null}
                                  imageTitle="Image Title"
                                  imageUrl=""
                                  imageWidth={null}
                                  isAvatar={false}
                                  isCircular={true}
                                  isFluid={true}
                                  isLazyLoaded={true}
                                  isSquare={false}
                                  label={null}
                                  sizes={null}
                                  srcSet={null}
                                >
                                  <figure
                                    className="responsive-image is-fluid is-circular"
                                  />
                                </ResponsiveImage>
                                <div />
                              </LazyLoader>
                            </withLazyLoad(ResponsiveImage)>
                          </div>
                        </Thumbnail>
                        <Heading
                          className={null}
                          hasMargin={true}
                          isColorInverted={false}
                          size="small"
                          textAlign={null}
                        >
                          <Header
                            as="h4"
                            className=""
                            inverted={false}
                            textAlign={null}
                          >
                            <h4
                              className="ui header"
                            >
                              Mitjons & Kira
                            </h4>
                          </Header>
                        </Heading>
                      </div>
                    </FlexContainer>
                  </div>
                </GridColumn>
              </GridColumn>
            </div>
          </GridRow>
        </GridRow>
        <GridRow
          horizontalAlignContent="left"
          verticalAlign="top"
        >
          <GridRow
            textAlign="left"
            verticalAlign="top"
          >
            <div
              className="left aligned top aligned row"
            >
              <GridColumn
                computer={7}
                mobile={12}
                tablet={12}
                verticalAlignContent="top"
                width={null}
              >
                <GridColumn
                  computer={7}
                  mobile={12}
                  tablet={12}
                  verticalAlign="top"
                  width={null}
                >
                  <div
                    className="top aligned seven wide computer twelve wide mobile twelve wide tablet column"
                  >
                    <Paragraph
                      isCompact={false}
                      size="medium"
                      weight={null}
                    >
                      <p
                        className=""
                      >
                        We do love cats
                      </p>
                    </Paragraph>
                  </div>
                </GridColumn>
              </GridColumn>
              <GridColumn
                computer={5}
                mobile={12}
                tablet={12}
                verticalAlignContent="top"
                width={null}
              >
                <GridColumn
                  computer={5}
                  mobile={12}
                  tablet={12}
                  verticalAlign="top"
                  width={null}
                >
                  <div
                    className="top aligned five wide computer twelve wide mobile twelve wide tablet column"
                  >
                    <Heading
                      className={null}
                      hasMargin={true}
                      isColorInverted={false}
                      size="small"
                      textAlign={null}
                    >
                      <Header
                        as="h4"
                        className=""
                        inverted={false}
                        textAlign={null}
                      >
                        <h4
                          className="ui header"
                        >
                          Contact Information
                        </h4>
                      </Header>
                    </Heading>
                    <List
                      relaxed={true}
                      size="medium"
                    >
                      <div
                        className="ui medium relaxed list"
                        role="list"
                      >
                        <ListItem>
                          <div
                            className="item"
                            onClick={[Function]}
                            role="listitem"
                          >
                            <span>
                              Languages: 
                            </span>
                            <span>
                              English, Italian, German, Spanish
                            </span>
                          </div>
                        </ListItem>
                      </div>
                    </List>
                  </div>
                </GridColumn>
              </GridColumn>
            </div>
          </GridRow>
        </GridRow>
      </div>
    </Grid>
  </Grid>
</HostProfile>
`;

exports[`<HostProfile /> if \`props.phone\` is defined should render the right structure 1`] = `
<HostProfile
  avatarUrl="https://si4.cdbcdn.com/oh/4efbc79e-34db-4447-b31a-24e77f33f4e9.jpg?w=1024&mode=max"
  contactInformationHeadingText="Contact Information"
  description="We do love cats"
  email={null}
  emailLabel="Email"
  headingText="Your Host"
  languages={null}
  languagesLabel="Languages"
  name="Mitjons & Kira"
  phone="+34932206524"
  phoneLabel="Phone"
>
  <Grid
    areColumnsCentered={false}
    isStackable={false}
    textAlign="left"
  >
    <Grid
      centered={false}
      stackable={false}
      textAlign="left"
    >
      <div
        className="ui left aligned grid"
      >
        <GridRow
          horizontalAlignContent="left"
        >
          <GridRow
            textAlign="left"
          >
            <div
              className="left aligned row"
            >
              <GridColumn
                verticalAlignContent="top"
                width={12}
              >
                <GridColumn
                  verticalAlign="top"
                  width={12}
                >
                  <div
                    className="top aligned twelve wide column"
                  >
                    <Heading
                      className={null}
                      hasMargin={true}
                      isColorInverted={false}
                      size="medium"
                      textAlign={null}
                    >
                      <Header
                        as="h3"
                        className=""
                        inverted={false}
                        textAlign={null}
                      >
                        <h3
                          className="ui header"
                        >
                          Your Host
                        </h3>
                      </Header>
                    </Heading>
                  </div>
                </GridColumn>
              </GridColumn>
            </div>
          </GridRow>
        </GridRow>
        <GridRow
          horizontalAlignContent="left"
        >
          <GridRow
            textAlign="left"
          >
            <div
              className="left aligned row"
            >
              <GridColumn
                verticalAlignContent="top"
                width={12}
              >
                <GridColumn
                  verticalAlign="top"
                  width={12}
                >
                  <div
                    className="top aligned twelve wide column"
                  >
                    <FlexContainer
                      alignContent={null}
                      alignItems="center"
                      flexDirection={null}
                      flexWrap={null}
                      justifyContent={null}
                    >
                      <div
                        className="flex-container"
                        style={
                          Object {
                            "alignContent": null,
                            "alignItems": "center",
                            "display": "flex",
                            "flexDirection": null,
                            "flexGrow": "1",
                            "flexWrap": null,
                            "height": "100%",
                            "justifyContent": null,
                          }
                        }
                      >
                        <Thumbnail
                          className=""
                          hasMargin={true}
                          hasRoundedCorners={false}
                          imageUrl="https://si4.cdbcdn.com/oh/4efbc79e-34db-4447-b31a-24e77f33f4e9.jpg?w=1024&mode=max"
                          isCircular={true}
                          isSquare={false}
                          label={null}
                          size={null}
                        >
                          <div
                            className="ui thumbnail has-margin is-circular"
                          >
                            <withLazyLoad(ResponsiveImage)
                              hasRoundedCorners={false}
                              imageUrl="https://si4.cdbcdn.com/oh/4efbc79e-34db-4447-b31a-24e77f33f4e9.jpg?w=1024&mode=max"
                              isCircular={true}
                              isFluid={true}
                              isLazyLoaded={true}
                              isSquare={false}
                            >
                              <LazyLoader
                                componentProps={
                                  Object {
                                    "hasRoundedCorners": false,
                                    "isCircular": true,
                                    "isFluid": true,
                                    "isLazyLoaded": true,
                                    "isSquare": false,
                                    "placeholderImageUrl": undefined,
                                    "sizes": undefined,
                                  }
                                }
                                lazyProps={
                                  Object {
                                    "imageUrl": "https://si4.cdbcdn.com/oh/4efbc79e-34db-4447-b31a-24e77f33f4e9.jpg?w=1024&mode=max",
                                    "srcSet": undefined,
                                  }
                                }
                              >
                                <div />
                                <ResponsiveImage
                                  hasRoundedCorners={false}
                                  imageHeight={null}
                                  imageTitle="Image Title"
                                  imageUrl=""
                                  imageWidth={null}
                                  isAvatar={false}
                                  isCircular={true}
                                  isFluid={true}
                                  isLazyLoaded={true}
                                  isSquare={false}
                                  label={null}
                                  sizes={null}
                                  srcSet={null}
                                >
                                  <figure
                                    className="responsive-image is-fluid is-circular"
                                  />
                                </ResponsiveImage>
                                <div />
                              </LazyLoader>
                            </withLazyLoad(ResponsiveImage)>
                          </div>
                        </Thumbnail>
                        <Heading
                          className={null}
                          hasMargin={true}
                          isColorInverted={false}
                          size="small"
                          textAlign={null}
                        >
                          <Header
                            as="h4"
                            className=""
                            inverted={false}
                            textAlign={null}
                          >
                            <h4
                              className="ui header"
                            >
                              Mitjons & Kira
                            </h4>
                          </Header>
                        </Heading>
                      </div>
                    </FlexContainer>
                  </div>
                </GridColumn>
              </GridColumn>
            </div>
          </GridRow>
        </GridRow>
        <GridRow
          horizontalAlignContent="left"
          verticalAlign="top"
        >
          <GridRow
            textAlign="left"
            verticalAlign="top"
          >
            <div
              className="left aligned top aligned row"
            >
              <GridColumn
                computer={7}
                mobile={12}
                tablet={12}
                verticalAlignContent="top"
                width={null}
              >
                <GridColumn
                  computer={7}
                  mobile={12}
                  tablet={12}
                  verticalAlign="top"
                  width={null}
                >
                  <div
                    className="top aligned seven wide computer twelve wide mobile twelve wide tablet column"
                  >
                    <Paragraph
                      isCompact={false}
                      size="medium"
                      weight={null}
                    >
                      <p
                        className=""
                      >
                        We do love cats
                      </p>
                    </Paragraph>
                  </div>
                </GridColumn>
              </GridColumn>
              <GridColumn
                computer={5}
                mobile={12}
                tablet={12}
                verticalAlignContent="top"
                width={null}
              >
                <GridColumn
                  computer={5}
                  mobile={12}
                  tablet={12}
                  verticalAlign="top"
                  width={null}
                >
                  <div
                    className="top aligned five wide computer twelve wide mobile twelve wide tablet column"
                  >
                    <Heading
                      className={null}
                      hasMargin={true}
                      isColorInverted={false}
                      size="small"
                      textAlign={null}
                    >
                      <Header
                        as="h4"
                        className=""
                        inverted={false}
                        textAlign={null}
                      >
                        <h4
                          className="ui header"
                        >
                          Contact Information
                        </h4>
                      </Header>
                    </Heading>
                    <List
                      relaxed={true}
                      size="medium"
                    >
                      <div
                        className="ui medium relaxed list"
                        role="list"
                      >
                        <ListItem>
                          <div
                            className="item"
                            onClick={[Function]}
                            role="listitem"
                          >
                            <span>
                              Phone: 
                            </span>
                            <span>
                              <a
                                href="tel:+34932206524"
                              >
                                +34932206524
                              </a>
                            </span>
                          </div>
                        </ListItem>
                      </div>
                    </List>
                  </div>
                </GridColumn>
              </GridColumn>
            </div>
          </GridRow>
        </GridRow>
      </div>
    </Grid>
  </Grid>
</HostProfile>
`;

exports[`<HostProfile /> should render the right structure 1`] = `
<HostProfile
  avatarUrl="https://si4.cdbcdn.com/oh/4efbc79e-34db-4447-b31a-24e77f33f4e9.jpg?w=1024&mode=max"
  contactInformationHeadingText="Contact Information"
  description="We do love cats"
  email={null}
  emailLabel="Email"
  headingText="Your Host"
  languages={null}
  languagesLabel="Languages"
  name="Mitjons & Kira"
  phone={null}
  phoneLabel="Phone"
>
  <Grid
    areColumnsCentered={false}
    isStackable={false}
    textAlign="left"
  >
    <Grid
      centered={false}
      stackable={false}
      textAlign="left"
    >
      <div
        className="ui left aligned grid"
      >
        <GridRow
          horizontalAlignContent="left"
        >
          <GridRow
            textAlign="left"
          >
            <div
              className="left aligned row"
            >
              <GridColumn
                verticalAlignContent="top"
                width={12}
              >
                <GridColumn
                  verticalAlign="top"
                  width={12}
                >
                  <div
                    className="top aligned twelve wide column"
                  >
                    <Heading
                      className={null}
                      hasMargin={true}
                      isColorInverted={false}
                      size="medium"
                      textAlign={null}
                    >
                      <Header
                        as="h3"
                        className=""
                        inverted={false}
                        textAlign={null}
                      >
                        <h3
                          className="ui header"
                        >
                          Your Host
                        </h3>
                      </Header>
                    </Heading>
                  </div>
                </GridColumn>
              </GridColumn>
            </div>
          </GridRow>
        </GridRow>
        <GridRow
          horizontalAlignContent="left"
        >
          <GridRow
            textAlign="left"
          >
            <div
              className="left aligned row"
            >
              <GridColumn
                verticalAlignContent="top"
                width={12}
              >
                <GridColumn
                  verticalAlign="top"
                  width={12}
                >
                  <div
                    className="top aligned twelve wide column"
                  >
                    <FlexContainer
                      alignContent={null}
                      alignItems="center"
                      flexDirection={null}
                      flexWrap={null}
                      justifyContent={null}
                    >
                      <div
                        className="flex-container"
                        style={
                          Object {
                            "alignContent": null,
                            "alignItems": "center",
                            "display": "flex",
                            "flexDirection": null,
                            "flexGrow": "1",
                            "flexWrap": null,
                            "height": "100%",
                            "justifyContent": null,
                          }
                        }
                      >
                        <Thumbnail
                          className=""
                          hasMargin={true}
                          hasRoundedCorners={false}
                          imageUrl="https://si4.cdbcdn.com/oh/4efbc79e-34db-4447-b31a-24e77f33f4e9.jpg?w=1024&mode=max"
                          isCircular={true}
                          isSquare={false}
                          label={null}
                          size={null}
                        >
                          <div
                            className="ui thumbnail has-margin is-circular"
                          >
                            <withLazyLoad(ResponsiveImage)
                              hasRoundedCorners={false}
                              imageUrl="https://si4.cdbcdn.com/oh/4efbc79e-34db-4447-b31a-24e77f33f4e9.jpg?w=1024&mode=max"
                              isCircular={true}
                              isFluid={true}
                              isLazyLoaded={true}
                              isSquare={false}
                            >
                              <LazyLoader
                                componentProps={
                                  Object {
                                    "hasRoundedCorners": false,
                                    "isCircular": true,
                                    "isFluid": true,
                                    "isLazyLoaded": true,
                                    "isSquare": false,
                                    "placeholderImageUrl": undefined,
                                    "sizes": undefined,
                                  }
                                }
                                lazyProps={
                                  Object {
                                    "imageUrl": "https://si4.cdbcdn.com/oh/4efbc79e-34db-4447-b31a-24e77f33f4e9.jpg?w=1024&mode=max",
                                    "srcSet": undefined,
                                  }
                                }
                              >
                                <div />
                                <ResponsiveImage
                                  hasRoundedCorners={false}
                                  imageHeight={null}
                                  imageTitle="Image Title"
                                  imageUrl=""
                                  imageWidth={null}
                                  isAvatar={false}
                                  isCircular={true}
                                  isFluid={true}
                                  isLazyLoaded={true}
                                  isSquare={false}
                                  label={null}
                                  sizes={null}
                                  srcSet={null}
                                >
                                  <figure
                                    className="responsive-image is-fluid is-circular"
                                  />
                                </ResponsiveImage>
                                <div />
                              </LazyLoader>
                            </withLazyLoad(ResponsiveImage)>
                          </div>
                        </Thumbnail>
                        <Heading
                          className={null}
                          hasMargin={true}
                          isColorInverted={false}
                          size="small"
                          textAlign={null}
                        >
                          <Header
                            as="h4"
                            className=""
                            inverted={false}
                            textAlign={null}
                          >
                            <h4
                              className="ui header"
                            >
                              Mitjons & Kira
                            </h4>
                          </Header>
                        </Heading>
                      </div>
                    </FlexContainer>
                  </div>
                </GridColumn>
              </GridColumn>
            </div>
          </GridRow>
        </GridRow>
        <GridRow
          horizontalAlignContent="left"
          verticalAlign="top"
        >
          <GridRow
            textAlign="left"
            verticalAlign="top"
          >
            <div
              className="left aligned top aligned row"
            >
              <GridColumn
                computer={7}
                mobile={12}
                tablet={12}
                verticalAlignContent="top"
                width={null}
              >
                <GridColumn
                  computer={7}
                  mobile={12}
                  tablet={12}
                  verticalAlign="top"
                  width={null}
                >
                  <div
                    className="top aligned seven wide computer twelve wide mobile twelve wide tablet column"
                  >
                    <Paragraph
                      isCompact={false}
                      size="medium"
                      weight={null}
                    >
                      <p
                        className=""
                      >
                        We do love cats
                      </p>
                    </Paragraph>
                  </div>
                </GridColumn>
              </GridColumn>
              <GridColumn
                computer={5}
                mobile={12}
                tablet={12}
                verticalAlignContent="top"
                width={null}
              >
                <GridColumn
                  computer={5}
                  mobile={12}
                  tablet={12}
                  verticalAlign="top"
                  width={null}
                >
                  <div
                    className="top aligned five wide computer twelve wide mobile twelve wide tablet column"
                  >
                    <Heading
                      className={null}
                      hasMargin={true}
                      isColorInverted={false}
                      size="small"
                      textAlign={null}
                    >
                      <Header
                        as="h4"
                        className=""
                        inverted={false}
                        textAlign={null}
                      >
                        <h4
                          className="ui header"
                        >
                          Contact Information
                        </h4>
                      </Header>
                    </Heading>
                    <List
                      relaxed={true}
                      size="medium"
                    >
                      <div
                        className="ui medium relaxed list"
                        role="list"
                      />
                    </List>
                  </div>
                </GridColumn>
              </GridColumn>
            </div>
          </GridRow>
        </GridRow>
      </div>
    </Grid>
  </Grid>
</HostProfile>
`;
